<resources>
    <string name="app_name">equipoTres</string>
    <string name="login_title">INVENTARIO</string>
    <string name="login_subtitle">Usa tu huella para acceder</string>
    <string name="biometric_auth_title">Autenticación Biométrica</string>
    <string name="biometric_auth_subtitle">Coloca tu dedo en el sensor</string>
    <string name="biometric_cancel">Cancelar</string>
    <string name="biometric_error">Error de autenticación</string>
    <string name="biometric_success">¡Autenticación exitosa!</string>
    <string name="biometric_failed">Huella no reconocida</string>
    <string name="biometric_not_available">Huella dactilar no disponible</string>
    <string name="inventary_description">Inventario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Ir atras</string>
    <string name="appwidget_text">Este es mi widget</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="title_widget">¿Cuanto tengo de inventario?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>

</resources>