<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>
        <variable
            name="viewModel"
            type="com.example.equipotres.viewmodel.LoginViewModel" />
    </data>

    <!-- CONTENEDOR PRINCIPAL -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:padding="24dp"
        tools:context=".ui.fragment.login.LoginFragment">

        <!--IMAGEN -->
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/inventary_description"
            android:src="@drawable/inventary_img_login"
            app:layout_constraintBottom_toTopOf="@+id/tvAppTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <!--TÍTULO DE LA APP -->
        <TextView
            android:id="@+id/tvAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="228dp"
            android:text="@string/login_title"
            android:textColor="@color/primary_text"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--SUBTÍTULO -->
        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_subtitle"
            android:textColor="@color/text_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAppTitle" />

        <!--BOTÓN DE AUTENTICACIÓN -->
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="243dp"
            android:layout_height="214dp"
            android:layout_marginBottom="116dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/fingetprint_login" />

        <!--MENSAJE DE ESTADO (ERROR/ÉXITO) -->
        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/error_red"
            android:textSize="19sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/lottieAnimationView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/lottieAnimationView"
            app:layout_constraintTop_toBottomOf="@id/lottieAnimationView"
            app:layout_constraintVertical_bias="0.571"
            tools:text="Error de autenticación"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>